@@ -1,3 +1,8 @@
+2009-12-30  Miguel Sofer  <msofer@users.sf.net>
+
+	* library/init.tcl (unknown): fix infinite recursion of ::unknown
+	when [set] is undefined [Bug 2824981].
+
 2009-12-29  Donal K. Fellows  <dkf@users.sf.net>
 
 	* generic/tclHistory.c (Tcl_RecordAndEvalObj): Reduce the amount
